--- a/config_en.json
+++ b/config_en.json
@@ -666,27 +666,27 @@
       "enableAutoSliding":false,
       "preview_data":false
     },
-    {
-      "layout":"blog",
-      "name":"Blog",
-      "enableBackground":false,
-      "padding":15.0,
-      "innerPadding":5.0,
-      "radius":9.0,
-      "hideTitle":false,
-      "hideAuthor":true,
-      "hideDate":true,
-      "hideComment":true,
-      "showOnlyImage":false,
-      "hMargin":6.0,
-      "vMargin":0.0,
-      "isSnapping":false,
-      "cardDesign":"simple",
-      "enableAutoSliding":false,
-      "imageBorder":3.0,
-      "include":[],
-      "preview_data":false
-    },
+{
+"layout":"blog",
+"name":"Our Blog Posts",
+"enableBackground":false,
+"padding":16.0,
+"innerPadding":16.0,
+"radius":9.0,
+"hideTitle":false,
+"hideAuthor":false,
+"hideDate":false,
+"hideComment":false,
+"showOnlyImage":false,
+"hMargin":6.0,
+"vMargin":0.0,
+"isSnapping":false,
+"cardDesign":"simple",
+"enableAutoSliding":false,
+"imageBorder":3.0,
+"include":[],
+"preview_data":false
+},
     {
       "items":[],
       "layout":"button",
