--- a/config_en.json
+++ b/config_en.json
@@ -667,7 +667,7 @@
       "preview_data":false
     },
     {
-      "layout":"Two Columns",
+      "layout":"blog",
       "name":"المدونة",
       "enableBackground":false,
       "padding":15.0,
