--- a/config_en.json
+++ b/config_en.json
@@ -668,7 +668,7 @@
     },
     {
       "layout":"blog",
-      "name":"المدونة",
+      "name":"Blog",
       "enableBackground":false,
       "padding":15.0,
       "innerPadding":5.0,
