--- a/config_en.json
+++ b/config_en.json
@@ -1307,22 +1307,5 @@
         "buttonAlignment":"centerLeft"}
     },
     "backgroundColor":"ff000000",
-    "backgroundImage":null
-  },
-  "overrideTranslation":{
-    "sale":"Sale {percent} ٪",
-    "aboutUs":"About Us",
-    "@@locale":"en",
-    "checkout":"Checkout",
-    "generalSetting":"Account",
-    "availability":"",
-    "outOfStock":"Out of Stock"},
-  "overrideTranslation":{
-    "sale":"Sale {percent} ٪",
-    "aboutUs":"About Us",
-    "@@locale":"en",
-    "checkout":"Checkout",
-    "generalSetting":"Account",
-    "availability":"",
-    "outOfStock":"Out of Stock"}
+    "backgroundImage":null}
 }
