--- a/config_ar.json
+++ b/config_ar.json
@@ -805,7 +805,7 @@
         "x":0.0,
         "y":10.0
       },
-      "alwaysShowTabBar":true,
+      "alwaysShowTabBar":false,
       "TabBarIndicator":{
         "height":2.0,
         "tabPosition":"bottom",
