--- a/config_ar.json
+++ b/config_ar.json
@@ -634,48 +634,51 @@
     {
       "name":"شوهدت مؤخراً",
       "layout":"recentView",
-      "isSnapping":false,
-      "image":"",
-      "borderRadius":3.0,
-      "hMargin":3.0,
-      "useCircularRadius":true,
-      "useSort":false,
-      "showCategory":false,
-      "vMargin":0.0,
-      "hPadding":0.0,
-      "vPadding":0.0,
-      "cardDesign":"simpleCard",
-      "titleLine":1,
-      "backgroundRadius":10.0,
-      "showCountDown":false,
-      "onSale":false,
-      "rows":1,
-      "columns":0,
-      "imageRatio":1.0,
-      "imageBoxfit":"cover",
-      "hidePrice":true,
-      "hideStore":false,
-      "hideTitle":true,
-      "featured":false,
-      "enableRating":false,
-      "showStockStatus":false,
-      "hideEmptyProductListRating":false,
-      "showHeart":false,
-      "showCartButton":false,
-      "showCartIcon":false,
-      "showCartIconColor":false,
-      "cartIconRadius":9.0,
-      "showQuantity":false,
-      "enableBottomAddToCart":false,
-      "showOnlyImage":false,
-      "showCartButtonWithQuantity":false,
-      "parallax":false,
-      "parallaxImageRatio":1.2,
-      "hideEmptyProductLayout":false,
-      "productListItemHeight":0.0,
-      "enableAutoSliding":false,
-      "preview_data":false
-    },
+"isSnapping":false,
+"image":"",
+"borderRadius":3.0,
+"hMargin":0.0,
+"useCircularRadius":true,
+"useSort":false,
+"showCategory":false,
+"vMargin":0.0,
+"hPadding":0.0,
+"vPadding":0.0,
+"cardDesign":"simpleCard",
+"titleLine":1,
+"backgroundRadius":10.0,
+"showCountDown":false,
+"onSale":false,
+"rows":1,
+"columns":0,
+"imageRatio":1.0,
+"imageBoxfit":"cover",
+"hidePrice":true,
+"hideStore":false,
+"hideTitle":true,
+"featured":false,
+"enableRating":false,
+"showStockStatus":false,
+"hideEmptyProductListRating":false,
+"showHeart":false,
+"showCartButton":false,
+"showCartIcon":false,
+"showCartIconColor":false,
+"cartIconRadius":9.0,
+"showQuantity":false,
+"enableBottomAddToCart":false,
+"showOnlyImage":false,
+"showCartButtonWithQuantity":false,
+"parallax":false,
+"parallaxImageRatio":1.2,
+"hideEmptyProductLayout":false,
+"productListItemHeight":0.0,
+"enableAutoSliding":false,
+"key":"xOVngNnUfukivxEzHqlTfw",
+"isBulk":null,
+"isPreviewing":null,
+"preview_data":false
+},
     {
       "layout":"blog",
       "name":"المدونة",
