--- a/config_en.json
+++ b/config_en.json
@@ -633,49 +633,52 @@
       "preview_data":false
     },
     {
+      "key":"xOVngNnUfukivxEzHqlTfw",
       "name":"Recently Viewed",
-      "layout":"recentView",
-      "isSnapping":false,
-      "image":"",
-      "borderRadius":3.0,
-      "hMargin":3.0,
-      "useCircularRadius":true,
-      "useSort":false,
-      "showCategory":false,
-      "vMargin":0.0,
-      "hPadding":0.0,
-      "vPadding":0.0,
-      "cardDesign":"simpleCard",
-      "titleLine":1,
-      "backgroundRadius":10.0,
-      "showCountDown":false,
-      "onSale":false,
       "rows":1,
+      "image":"",
+      "isBulk":null,
+      "layout":"fourColumn",
+      "onSale":false,
       "columns":0,
-      "imageRatio":1.0,
-      "imageBoxfit":"cover",
+      "hMargin":0,
+      "useSort":false,
+      "vMargin":0,
+      "featured":false,
+      "hPadding":0,
+      "parallax":false,
+      "vPadding":0,
       "hidePrice":true,
       "hideStore":false,
       "hideTitle":true,
-      "featured":false,
-      "enableRating":false,
-      "showStockStatus":false,
-      "hideEmptyProductListRating":false,
       "showHeart":false,
-      "showCartButton":false,
+      "titleLine":1,
+      "cardDesign":"simpleCard",
+      "imageRatio":1,
+      "isSnapping":false,
+      "imageBoxfit":"cover",
+      "borderRadius":3,
+      "enableRating":false,
+      "isPreviewing":null,
+      "preview_data":false,
       "showCartIcon":false,
-      "showCartIconColor":false,
-      "cartIconRadius":9.0,
+      "showCategory":false,
       "showQuantity":false,
-      "enableBottomAddToCart":false,
+      "showCountDown":false,
       "showOnlyImage":false,
-      "showCartButtonWithQuantity":false,
-      "parallax":false,
-      "parallaxImageRatio":1.2,
-      "hideEmptyProductLayout":false,
-      "productListItemHeight":0.0,
+      "cartIconRadius":9,
+      "showCartButton":false,
+      "showStockStatus":false,
+      "backgroundRadius":10,
       "enableAutoSliding":false,
-      "preview_data":false
+      "showCartIconColor":false,
+      "useCircularRadius":true,
+      "parallaxImageRatio":1.2,
+      "enableBottomAddToCart":false,
+      "productListItemHeight":0,
+      "hideEmptyProductLayout":false,
+      "hideEmptyProductListRating":false,
+      "showCartButtonWithQuantity":false
     },
     {
       "layout":"blog",
