--- a/config_ar.json
+++ b/config_ar.json
@@ -1322,5 +1322,5 @@
         "buttonAlignment":"centerLeft"}
     },
     "backgroundColor":"ff000000",
-    "backgroundImage":null}
+    "backgroundImage":null
 }
