--- a/config_en.json
+++ b/config_en.json
@@ -1307,5 +1307,5 @@
         "buttonAlignment":"centerLeft"}
     },
     "backgroundColor":"ff000000",
-    "backgroundImage":null}
+    "backgroundImage":null
 }
