--- a/config_en.json
+++ b/config_en.json
@@ -454,6 +454,44 @@
           "name":null,
           "keepDefaultTitle":false,
           "colors":null,
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/dr-althea-home-logo.png",
+          "tag":null,
+          "category":"gid://shopify/Collection/273173053520",
+          "showDescription":true,
+          "productType":false,
+          "orderby":null,
+          "order":null,
+          "onSale":false,
+          "featured":false,
+          "showText":null,
+          "description":null
+        },        
+        {
+          "originalColor":false,
+          "backgroundColor":null,
+          "title":null,
+          "name":null,
+          "keepDefaultTitle":false,
+          "colors":null,
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/medicube_home-logo.png",
+          "tag":null,
+          "category":"gid://shopify/Collection/274085740624",
+          "showDescription":true,
+          "productType":false,
+          "orderby":null,
+          "order":null,
+          "onSale":false,
+          "featured":false,
+          "showText":null,
+          "description":null
+        },        
+        {
+          "originalColor":false,
+          "backgroundColor":null,
+          "title":null,
+          "name":null,
+          "keepDefaultTitle":false,
+          "colors":null,
           "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/Purito_logo_home.svg",
           "tag":null,
           "category":"gid://shopify/Collection/272569368656",
