--- a/config_en.json
+++ b/config_en.json
@@ -55,7 +55,7 @@
       "items":[
         {
           "key":"zqevhJCLcy",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/DR_BANNER_MOBILE_EN.webp?v=1727842921",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/EID-DR_BANNER_MOBILE_EN.jpg?v=1743360479",
           "video":"",
           "category":"gid://shopify/Collection/138436935760",
           "products":[],
@@ -446,7 +446,7 @@
       "separateWidth":24.0,
       "shadow":null,
       "gradientStyle":false,
-      "items":[     
+      "items":[
         {
           "originalColor":false,
           "backgroundColor":null,
