--- a/config_ar.json
+++ b/config_ar.json
@@ -905,7 +905,13 @@
     "LC01":"FFEEC491",
     "LC02":"FFECC19F",
     "LC03":"FFF1C590",
-    "LC04":"FFDBAC8A"
+    "LC04":"FFDBAC8A",
+    "BP03":"B88A5F",
+    "BP04":"B28055",
+    "BP001":"d7bea8",
+    "BP002":"dbbbae",
+    "BP003":"cebda3",
+    "BP004":"cab69d"
   },
 
   "TabBar":[
