--- a/config_en.json
+++ b/config_en.json
@@ -900,10 +900,16 @@
   },
   
   "ProductColors":{
-    "LC01":"FFEEC491",
-    "LC02":"FFECC19F",
-    "LC03":"FFF1C590",
-    "LC04":"FFDBAC8A"
+    "LC01": "#FFEEC491",
+    "LC02": "#FFECC19F", 
+    "LC03": "#FFF1C590",
+    "LC04": "#FFDBAC8A",
+    "BP03": "#B88A5F",
+    "BP04": "#B28055",
+    "BP001": "#D7BEA8",
+    "BP002": "#DBBBAE",
+    "BP003": "#CEBDA3",
+    "BP004": "#CAB69D"
   },
 
   "TabBar":[
