--- a/config_en.json
+++ b/config_en.json
@@ -899,6 +899,7 @@
         "canClose":true}}
   },
   
+    "ProductColors":{
     "LC01":"FFEEC491",
     "LC02":"FFECC19F",
     "LC03":"FFF1C590",
