--- a/config_en.json
+++ b/config_en.json
@@ -900,18 +900,54 @@
       }
     },
     "ProductColors":{
-      "LC01":"FFEEC491",
-      "LC02":"FFECC19F",
-      "LC03":"FFF1C590",
-      "LC04":"FFDBAC8A",
-      "BP01":"FFD6AB7C",
-      "BP02":"FFCDA373",
-      "BP03":"FFB88A5F",
-      "BP04":"FFB28055",
-      "BP001":"FFD7BEA8",
-      "BP002":"FFDBBBAE",
-      "BP003":"FFCEBDA3",
-      "BP004":"FFCAB69D"
+      "01 NEUTRAL NUDE": "FFC3887A",
+      "02 MILKY CHOCOLATE": "FF976A65", 
+      "03 ROSE NUDE": "FFB37B94",
+      "04 SWEET LIPS": "FFB66B72",
+      "05 RED PASSION": "FFB11B36",
+      "06 CASHMERE ROSE": "FF8F515C",
+      "07 BABY NUDE": "FFB7666F",
+      "08 LOVELY ROSE": "FFB48476",
+      "MP01": "FFEFB286",
+      "MP02": "FFE19971",
+      "MP03": "FFDF986A",
+      "MP04": "FFAF6540",
+      "17N": "FFfbdfc5",
+      "21N": "FFebc4a2",
+      "23N": "FFebbf98",
+      "ON.13": "FFecd2be",
+      "ON.21": "FFeccdb8",
+      "ON.23": "FFecc6ab",
+      "ON.25": "FFedbc9b",
+      "ON.27": "FFecb181",
+      "LC01": "FFEEC491",
+      "LC02": "FFECC19F",
+      "LC03": "FFF1C590",
+      "LC04": "FFDBAC8A",
+      "BO01": "FFfe6360",
+      "BO02": "FFf47060",
+      "BO03": "FFf47060",
+      "BO04": "FFec8d75",
+      "BP01": "FFD6AB7C",
+      "BP02": "FFCDA373",
+      "BP03": "FFB88A5F",
+      "BP04": "FFB28055",
+      "BP001": "FFd7bea8",
+      "BP002": "FFdbbbae",
+      "BP003": "FFcebda3",
+      "BP004": "FFcab69d",
+      "PO56": "FFEFB286",
+      "PO57": "FFE19971",
+      "PO58": "FFDF986A",
+      "PO59": "FFAF6540",
+      "MPL01": "FFf5d3ba",
+      "MPL02": "FFe8ceab",
+      "MPL03": "FFdebe97",
+      "MPL04": "FFdbb993",
+      "MPL001": "FFfcead2",
+      "MPL002": "FFf4d9c4",
+      "MPL003": "FFead3b4",
+      "MPL004": "FFe2c69f"
     }
   },
 
