--- a/config_en.json
+++ b/config_en.json
@@ -947,7 +947,9 @@
       "MPL001": "FFfcead2",
       "MPL002": "FFf4d9c4",
       "MPL003": "FFead3b4",
-      "MPL004": "FFe2c69f"
+      "MPL004": "FFe2c69f",
+      "001": "FFcfb091",
+      "002": "FFcca880"
     }
   },
 
