--- a/config_en.json
+++ b/config_en.json
@@ -11,7 +11,7 @@
       "minWidth":0,
       "alignment":"center",
       "marginTop":0,
-      "textColor":"ffffffff",
+      "textColor":"",
       "fontWeight":400,
       "isSafeArea":false,
       "marginLeft":0,
@@ -25,7 +25,7 @@
       "paddingRight":0,
       "preview_data":false,
       "paddingBottom":0,
-      "backgroundColor":"ff000000",
+      "backgroundColor":"",
       "usePrimaryColor":true,
       "enableBackground":false,
       "backgroundGradientColor":[]
@@ -1177,9 +1177,8 @@
         "paddingRight":0,
         "paddingBottom":0,
         "headerFontSize":16,
-        "backgroundColor":"",
-        "headerTextColor":"",
-        "usePrimaryColor": true,
+        "backgroundColor":"ff000000",
+        "headerTextColor":"ffffffff",
         "headerFontWeight":"400",
         "headerTextOpacity":1
       }
