--- a/config_ar.json
+++ b/config_ar.json
@@ -431,7 +431,7 @@
       "preview_data":false,
       "paddingBottom":0,
       "usePrimaryColor":false,
-      "enableBackground":false,
+      "enableBackground":true,
       "backgroundGradientColor":[]
     },
     {
