--- a/config_ar.json
+++ b/config_ar.json
@@ -27,7 +27,7 @@
       "paddingBottom":0,
       "backgroundColor":"ff000000",
       "usePrimaryColor":true,
-      "enableBackground":false,
+      "enableBackground":true,
       "backgroundGradientColor":[]
     },
     {
