--- a/config_ar.json
+++ b/config_ar.json
@@ -406,32 +406,32 @@
       "preview_data":false
     },
     {
-      "isSafeArea":true,
+      "font":"Tajawal",
+      "type":"static",
+      "title":"الماركات الاكثر شعبية",
+      "height":43,
+      "layout":"header_text",
+      "rotate":[],
+      "fontSize":22.96223958333333,
+      "minWidth":0,
+      "alignment":"bottomCenter",
+      "marginTop":0,
+      "fontWeight":600,
+      "isSafeArea":false,
+      "marginLeft":22,
+      "paddingTop":0,
       "showSearch":false,
+      "borderInput":false,
+      "marginRight":0,
+      "paddingLeft":5,
+      "textOpacity":1,
+      "marginBottom":0,
+      "paddingRight":15,
+      "preview_data":false,
+      "paddingBottom":0,
       "usePrimaryColor":true,
       "enableBackground":false,
-      "borderInput":false,
-      "title":"الماركات الاكثر شعبية",
-      "type":"static",
-      "backgroundColor":"03FFFFFF",
-      "alignment":"bottomCenter",
-      "fontWeight":600,
-      "fontSize":22.96223958333333,
-      "textOpacity":1.0,
-      "marginLeft":0.0,
-      "marginRight":0,
-      "marginBottom":0,
-      "marginTop":0,
-      "paddingLeft":0.0,
-      "paddingRight":0.0,
-      "paddingTop":0,
-      "paddingBottom":0,
-      "height":43.0,
-      "rotate":[],
-      "minWidth":0,
-      "backgroundGradientColor":[],
-      "font":"Tajawal",
-      "layout":"header_text"
+      "backgroundGradientColor":[]
     },
     {
       "type":"icon",
