--- a/config_ar.json
+++ b/config_ar.json
@@ -412,7 +412,7 @@
       "height":43,
       "layout":"header_text",
       "rotate":[],
-      "fontSize":22.96223958333333,
+      "fontSize":20,
       "minWidth":0,
       "alignment":"bottomCenter",
       "marginTop":0,
