--- a/config_ar.json
+++ b/config_ar.json
@@ -55,7 +55,7 @@
       "items":[
         {
           "key":"zqevhJCLcy",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/DR_BANNER_MOBILE_AR.webp?v=1727681366",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/EID-DR_BANNER_MOBILE_AR_2.jpg",
           "video":"",
           "category":"gid://shopify/Collection/138436935760",
           "products":[],
