--- a/config_ar.json
+++ b/config_ar.json
@@ -1014,6 +1014,26 @@
           "parent": null
         },
         {
+          "category": "gid://shopify/Collection/275543097424",
+          "parent": "gid://shopify/Collection/169582166096"
+        },
+        {
+          "category": "gid://shopify/Collection/275543064656",
+          "parent": "gid://shopify/Collection/169582166096"
+        },
+        {
+          "category": "gid://shopify/Collection/275543130192",
+          "parent": "gid://shopify/Collection/169582166096"
+        },
+        {
+          "category": "gid://shopify/Collection/275543031888",
+          "parent": "gid://shopify/Collection/169582166096"
+        },
+        {
+          "category": "gid://shopify/Collection/275543162960",
+          "parent": "gid://shopify/Collection/169582166096"
+        },
+        {
           "category": "gid://shopify/Collection/169582559312",
           "parent": null
         },
