--- a/config_en.json
+++ b/config_en.json
@@ -55,7 +55,7 @@
       "items":[
         {
           "key":"zqevhJCLcy",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/EID-DR_BANNER_MOBILE_EN.jpg",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/DR_BANNER_MOBILE_EN.webp",
           "video":"",
           "category":"gid://shopify/Collection/138436935760",
           "products":[],
