--- a/config_ar.json
+++ b/config_ar.json
@@ -55,7 +55,7 @@
       "items":[
         {
           "key":"zqevhJCLcy",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/DR_BANNER_MOBILE_AR.webp",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/Oman_s_National_Day_Banner_1600_x_1200_-_MO-AR.jpg",
           "video":"",
           "category":"gid://shopify/Collection/138436935760",
           "products":[],
