--- a/config_ar.json
+++ b/config_ar.json
@@ -958,7 +958,13 @@
       "Y03": "FFd5b279",
       "R01": "FFd0ad8a",
       "R02": "FFd0ad82",
-      "R03": "FFcfa372"
+      "R03": "FFcfa372",
+      "Cover Up 01": "FFeeddc2",
+      "Cover Up 02": "FFd6c0a1",
+      "Cover Up 03": "FFecd1b5",
+      "Cover Up 04": "FFd6b687",
+      "Cover Up 05": "FFefcbaf",
+      "Cover Up 06": "FFa5866c"
     }
   },
 
