--- a/config_en.json
+++ b/config_en.json
@@ -55,7 +55,7 @@
       "items":[
         {
           "key":"zqevhJCLcy",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/Oman_s_National_Day_Banner_1600_x_1200_-_MO-EN.jpg",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/DR_BANNER_MOBILE_EN.webp",
           "video":"",
           "category":"gid://shopify/Collection/138436935760",
           "products":[],
@@ -96,7 +96,7 @@
       "items":[
         {
           "key":"TjVhpjCOxW",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/cantu-logo_DarBeauty-min.png?v=1660070606",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/cantu-logo_DarBeauty-min.png",
           "video":"",
           "padding":5,
           "category":"gid://shopify/Collection/263133626448",
@@ -108,7 +108,7 @@
         },
         {
           "key":"vVGREcXlnd",
-          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/Lollis_Banner-min.png?v=1660067850",
+          "image":"https://cdn.shopify.com/s/files/1/0235/6687/6752/files/Lollis_Banner-min.png",
           "video":"",
           "padding":5,
           "category":"gid://shopify/Collection/261324963920",
